--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </head>
 <body>
 
-<h2>Modal Example</h2>
+<h2>Good Night,Sweet Dreams</h2>
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
+<button id="myBtn">CLICK HERE</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -60,7 +60,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <span class="close">&times;</span>
     <img src="New Project (2).jpg" style="width: 20%;"/>
     <p>You are the light in my life.You have a pretty eyes that expresses your innocence in you.
-      You have a smile that lightens my worries.If I start describing you,it would be another lifetime.YOU ARE SO SPECIAL TO ME.
+      You have a smile that lightens my worries.If I start describing you,it would be another lifetime.<b>YOU ARE SO SPECIAL TO ME.I LOVE YOU SO MUCH</b>
     </p>
   </div>
 
